<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:padding="16sp"
    android:backgroundTint="@color/white"
    android:backgroundTintMode="multiply"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appname"
        android:textColor="@color/teal_700"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="goToLoginPage"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"/>

</RelativeLayout>