<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".user_information.PatientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/patient_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome "
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="navigateToBookAppointmentActivity"
            android:text="Book Appointments"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="navigateToViewAppointmentsActivity"
            android:text="See Upcoming Appointments"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="navigateToViewPastAppointmentsActivity"
            android:text="See Past Appointments"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="navigateToViewVisitedDoctorsActivity"
            android:text="See Visited Doctors"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="navigateToPrescriptions"
            android:text="Health Information and Prescriptions"
            android:textAllCaps="false" />

    </LinearLayout>


    <Button
        android:id="@+id/signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Log Out"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>